--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
     "@types/react": "^17.0.2",
     "@typescript-eslint/eslint-plugin": "^4.15.2",
     "@typescript-eslint/parser": "^4.15.2",
+    "autoprefixer": "^10.2.4",
     "eslint": "^7.21.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-react": "^7.22.0",
+    "postcss": "^8.2.6",
     "prettier": "2.2.1",
+    "tailwindcss": "^2.0.3",
     "typescript": "^4.2.2"
   }
 }
