--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,10 +1,10 @@
 version: 2
 updates:
-- package-ecosystem: npm
-  directory: "/"
-  schedule:
-    interval: daily
-    time: "20:00"
-  open-pull-requests-limit: 10
-  reviewers:
-  - appare45
+  - package-ecosystem: npm
+    directory: '/'
+    schedule:
+      interval: daily
+      time: '20:00'
+    open-pull-requests-limit: 10
+    reviewers:
+      - appare45
