--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "prettier -w . && eslint --fix"
   },
   "dependencies": {
     "@firebase/firestore-types": "^2.1.0",
