--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,5 @@
 {
-  "cSpell.words": [
-    "firestore",
-    "semibold"
-  ],
+  "cSpell.words": ["firestore", "semibold"],
   "editor.defaultFormatter": "esbenp.prettier-vscode",
   "editor.formatOnSave": true
 }
