GitHub Actionsに時間制限を追加

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -18,3 +18,4 @@ jobs:
       - run: npm install -g yarn
       - run: yarn install --frozen-lockfile
       - run: yarn build
+        timeout-minutes: 5
