--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "firebase": "^8.3.1",
     "next": "10.0.9",
     "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "swr": "^0.5.4"
+    "react-dom": "17.0.2"
   },
   "devDependencies": {
     "@types/node": "^14.14.36",
