--- a/package.json
+++ b/package.json
@@ -9,14 +9,14 @@
     "lint": "prettier -w . && eslint --fix"
   },
   "dependencies": {
-    "@firebase/firestore-types": "^2.2.0",
-    "@headlessui/react": "^0.3.1",
     "firebase": "^8.3.1",
     "next": "10.0.9",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.4.0",
+    "@firebase/firestore-types": "^2.2.0",
     "@types/node": "^14.14.36",
     "@types/react": "^17.0.3",
     "@typescript-eslint/eslint-plugin": "^4.19.0",
