--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "prettier -w . && eslint --fix"
   },
   "dependencies": {
+    "@tailwindcss/forms": "^0.3.2",
     "firebase": "^8.3.2",
     "next": "10.1.3",
     "react": "17.0.2",
